--- a/src/_smart.scss
+++ b/src/_smart.scss
@@ -14,3 +14,10 @@ ____/ /_  / / / / / /_/ /_  /   / /_      ____/ // /__ _(__  )_(__  )
 
 *******************************************************************
 ********************************************************************/
+
+@use "sass:math";
+@use "sass:list";
+@use "sass:map";
+@use "sass:string";
+@use "sass:color";
+@use "sass:meta";
