--- a/src/_smart.scss
+++ b/src/_smart.scss
@@ -21,3 +21,10 @@ ____/ /_  / / / / / /_/ /_  /   / /_      ____/ // /__ _(__  )_(__  )
 @use "sass:string";
 @use "sass:color";
 @use "sass:meta";
+
+ /* Convert  CMYK to rgb */
+ @function cmyk($c,$m,$y,$k) {
+    @return rgb(math.round(255 * (1 - math.div($c,100)) * (1 - math.div($k,100))),
+             math.round(255 * (1 - math.div($m,100)) * (1 - math.div($k,100))),
+             math.round(255 * (1 - math.div($y,100)) * (1 - math.div($k,100))));
+ }
