--- a/src/_smart.scss
+++ b/src/_smart.scss
@@ -28,3 +28,10 @@ ____/ /_  / / / / / /_/ /_  /   / /_      ____/ // /__ _(__  )_(__  )
              math.round(255 * (1 - math.div($m,100)) * (1 - math.div($k,100))),
              math.round(255 * (1 - math.div($y,100)) * (1 - math.div($k,100))));
  }
+
+ /* Sixhexa should be 6 characters only*/
+@function sixhexa($hexasix) {
+    @if str-length(smarty) > str-length($hexasix) {
+        @return ##{to-upper-case($hexasix)};
+    }
+}
