--- a/src/_smart.scss
+++ b/src/_smart.scss
@@ -35,3 +35,32 @@ ____/ /_  / / / / / /_/ /_  /   / /_      ____/ // /__ _(__  )_(__  )
         @return ##{to-upper-case($hexasix)};
     }
 }
+
+/* Typescale pixels */
+@mixin typescale-px($base,$d,$n) {
+    $ratio: math.div($d,$n);
+     .xl {
+        font-size: math.div($base,$base) * $ratio * $ratio * $ratio * $ratio+rem;
+    }
+      .lg {
+        font-size: math.div($base,$base) * $ratio * $ratio * $ratio+rem; 
+    }
+        .md {
+        font-size: math.div($base,$base) * $ratio * $ratio+rem; 
+    }
+        .sm {
+        font-size: math.div($base,$base) * $ratio+rem;
+    }
+        .paragraph {
+        font-size: math.div($base,$base)+rem; 
+    }
+      .sub-text {
+        font-size: math.abs(math.div($base,$base) - 2)+rem; 
+    }
+    .buttons {
+        font-size: math.div(math.div($base,$base),$ratio)+rem;
+    }
+    .captions {
+        font-size:  math.div(math.div(math.div($base,$base),$ratio),$ratio)+rem;
+    }
+}
