--- a/src/_smart.scss
+++ b/src/_smart.scss
@@ -64,3 +64,11 @@ ____/ /_  / / / / / /_/ /_  /   / /_      ____/ // /__ _(__  )_(__  )
         font-size:  math.div(math.div(math.div($base,$base),$ratio),$ratio)+rem;
     }
 }
+
+ /*  Vendor specfied - prefix */
+@mixin vendors($property,$value,$c) {
+   $vendor: (webkit moz ms);
+   @for $_ from $c through $c {
+      #{'-'+#{nth($vendor,$_)}+'-'+#{$property}}: $value;
+   }
+}
