--- a/src/_smart.scss
+++ b/src/_smart.scss
@@ -72,3 +72,12 @@ ____/ /_  / / / / / /_/ /_  /   / /_      ____/ // /__ _(__  )_(__  )
       #{'-'+#{nth($vendor,$_)}+'-'+#{$property}}: $value;
    }
 }
+
+/* Monochromatic-color */
+  @mixin monochromatic-color($cors,$hs,$controlone,$controltwo) {
+     $hs: $hs;
+     $cor: (color background);
+     @for $_ from $controlone through $controltwo  {
+     #{nth($cor,$cors)}: hsl($hs,100%,50% + $_);
+ }
+}
