--- a/src/_smart.scss
+++ b/src/_smart.scss
@@ -81,3 +81,14 @@ ____/ /_  / / / / / /_/ /_  /   / /_      ____/ // /__ _(__  )_(__  )
      #{nth($cor,$cors)}: hsl($hs,100%,50% + $_);
  }
 }
+
+ /*  Triadic-color */
+@mixin triadic-color($cors,$hs) {
+     $hs: $hs;  
+     $cs: $hs + 120;
+     $c: $hs + 240; 
+     $cor: (color background);
+     #{nth($cor,$cors)}: hsl($hs,100%,50%);
+     #{nth($cor,$cors)}: hsl($cs,100%,50%);
+     #{nth($cor,$cors)}: hsl($c,100%,50%);
+}
