--- a/src/_smart.scss
+++ b/src/_smart.scss
@@ -116,3 +116,15 @@ ____/ /_  / / / / / /_/ /_  /   / /_      ____/ // /__ _(__  )_(__  )
      #{nth($cor,$cors)}: hsl($cs,100%,50%);
      #{nth($cor,$cors)}: hsl($c,100%,50%);
 }
+
+/*  flexible media queries */
+@mixin flexible-media($size,$c) {
+   $values:(
+      math.div($size,16)+em, 
+      math.div($size,12)+pt,
+      math.div($size,1)+px
+      );
+   @media only screen and (max-width: list.nth($values,$c)) {
+      @content;
+   }
+}
