--- a/src/_smart.scss
+++ b/src/_smart.scss
@@ -6,8 +6,8 @@ _____ \__  __ `__ \  __ `/_  ___/  __/    _____ \_  ___/_  ___/_  ___/
 ____/ /_  / / / / / /_/ /_  /   / /_      ____/ // /__ _(__  )_(__  ) 
 /____/ /_/ /_/ /_/\__,_/ /_/    \__/      /____/ \___/ /____/ /____/ 
          
-             A Best sass framework for build a typography, 
-                   colors, grid and many things too  
+             A Best sass framework for build typography, 
+                   colors, grid, and many things too 
                                                                       
                Tools Used : 100% powerful SASS language
                 copyright : © 2021 Suresh.P
